# amneziawg-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  thing.txt.gpg
droiddns/: build.gradle.kts  consumer-rules.pro
droiddns/src/androidTest/java/com/zaneschepke/droiddns/: ExampleInstrumentedTest.kt
droiddns/src/main/: AndroidManifest.xml
droiddns/src/main/java/com/zaneschepke/droiddns/: AndroidDnsResolver.kt  CustomDnsResolver.kt  DnsResolver.kt  JavaDnsResolver.kt
droiddns/src/test/java/com/zaneschepke/droiddns/: ExampleUnitTest.kt
gradle/: libs.versions.toml
tunnel/: build.gradle.kts
tunnel/src/main/: AndroidManifest.xml
tunnel/src/main/java/org/amnezia/awg/backend/: AwgQuickBackend.java  Backend.java  BackendException.java  GoBackend.java  NoopTunnelActionHandler.java  RootTunnelActionHandler.java  Statistics.java  Tunnel.java  TunnelActionHandler.java
tunnel/src/main/java/org/amnezia/awg/config/: Config.java  InetEndpoint.java  Interface.java  Peer.java
tunnel/src/test/resources/: working.conf
tunnel/tools/: CMakeLists.txt
tunnel/tools/libwg-go/: Makefile
ui/src/main/java/org/amnezia/awg/: Application.kt
